Update DL Intro Demo - Sagemaker Image Classifer via Transfer Learning.ipynb

--- a/DL Intro Demo - Sagemaker Image Classifer via Transfer Learning.ipynb
+++ b/DL Intro Demo - Sagemaker Image Classifer via Transfer Learning.ipynb
@@ -17,15 +17,15 @@
     "\n",
     "```\n",
     "my_training_classes\n",
-    "├── person\n",
-    "│   ├── han.jpg\n",
-    "│   ├── leia.jpg\n",
-    "|   ├── luke.jpg\n",
+    "├── dog\n",
+    "│   ├── dog100.jpg\n",
+    "│   ├── dog101.jpg\n",
+    "|   ├── dog102.jpg\n",
     "│   └── . . .\n",
-    "└── ship\n",
-    "│   ├── millenium_falcon.jpg\n",
-    "│   ├── tie-fighter.jpg    \n",
-    "│   ├── x-wing.jpg\n",
+    "└── cat\n",
+    "│   ├── cat100.jpg\n",
+    "│   ├── cat101.jpg    \n",
+    "│   ├── cat102.jpg\n",
     "│   ├── . . .\n",
     "└── . . .\n",
     "```"
